minor z-index fixes

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -33,3 +33,8 @@ li {
     }
   }
 }
+
+
+[data-popper-placement]{
+  z-index: 1;
+}
